--- a/index.html
+++ b/index.html
@@ -1,13 +1,71 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <script src=tmi.min.js></script>
-    <script src=TTSmain.js></script>
-  </head>
-  <body>
-    <input id="channel" type="text" placeholder="channel name goes here"></input> <input id="channel-button" value="GO" type="button"></input> <!--br/-->
-    <input id="skip-button" type="button" value="SKIP"></input> <br/>
-    <audio id="audio" controls autoplay></audio> <br/>
-    <div id="chatbox"></div>
+<html lang="es">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>TikTok LIVE</title>
+    <meta name="description" content="twitch tts.">
+    <script src="app.js"></script>
+    <script src="tmi.min.js"></script>
+    <script src="TTSmain.js"></script>
+
+    <link rel="stylesheet" href="styles.css">
+</head>
+
+<body>
+  <div class="tab">
+    <button class="tablinks" onclick="openTab(event, 'Tab1')">chat</button>
+    <button class="tablinks" onclick="openTab(event, 'Tab2')">config</button>
+    <div class="inputFields">
+      <input id="channel" type="text" placeholder="Twitch channel" value="melser_ngl"></input> <input id="channel-button" value="GO" type="button"></input>
+  </div>
+  <div>
+    <div id="voiceSelectContainer"></div>
+
+    <label for="filter-words">filtrar (palabras separadas):</label>
+    <input type="text" id="filter-words">
+</div>
+    <div class="toggleWrapper">
+      <input type="checkbox" class="dn" id="dn" checked>
+      <label for="dn" class="toggle">
+          <span class="toggle__handler">
+              <span class="crater crater--1"></span>
+              <span class="crater crater--2"></span>
+              <span class="crater crater--3"></span>
+          </span>
+          <span class="star star--1"></span>
+          <span class="star star--2"></span>
+          <span class="star star--3"></span>
+          <span class="star star--4"></span>
+          <span class="star star--5"></span>
+          <span class="star star--6"></span>
+      </label>
+  </div>
+</div>
+<audio id="audio" controls autoplay>
+</audio>
+<audio id="audio" autoplay></audio>
+<audio id="soundPlayer" type="audio/mp3"></audio>
+<input id="skip-button" type="button" value="SKIP"> </button>
+  <div id="chatbox"></div>
+<script>
+  const filterWordsInput = document.getElementById('filter-words');
+
+  // Load the last entered value from localStorage
+  const lastFilterWords = localStorage.getItem('lastFilterWords');
+  if (lastFilterWords) {
+      filterWordsInput.value = lastFilterWords;
+  }
+
+  filterWordsInput.addEventListener('change', () => {
+      const currentFilterWords = filterWordsInput.value;
+      if (currentFilterWords) {
+          // Store the current value in localStorage
+          localStorage.setItem('lastFilterWords', currentFilterWords);
+      }
+  });
+</script>
 </body>
 </html>
