--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TikTok LIVE</title>
+    <title>Twitch SpeechCHAT Voz</title>
     <meta name="description" content="twitch tts.">
     <script src="app.js"></script>
     <script src="tmi.min.js"></script>
